# soliton-playground

./: .gitignore  README.md  pyproject.toml
docs/: CENSUS_PROTOCOL.md  opener_summary.json
experiments/: jr_branch.py  opener_bubble_vs_ring.py  render_opener.py  snake_chain.py  trefoil_cascade.py
src/soliton_playground/: __init__.py  gpe_lab.py
